dev Se ajsuta bean y se agregan nuevas funcionalidades del nucles y se inicia proceso de comunicacion entre controllers